--- a/lesson_004/pom.xml
+++ b/lesson_004/pom.xml
@@ -7,6 +7,13 @@
     <groupId>lesson_003</groupId>
     <artifactId>3</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.4</version>
+        </dependency>
+    </dependencies>
 
 
 </project>
