--- a/lesson_011/pom.xml
+++ b/lesson_011/pom.xml
@@ -7,16 +7,24 @@
     <groupId>lesson_011</groupId>
     <artifactId>lesson_011</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <properties>
+        <defaultSuiteFiles>
+            testng.xml
+        </defaultSuiteFiles>
+        <suiteFile>${defaultSuiteFiles}</suiteFile>
+
+
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <dependencies>
         <dependency>
-        <groupId>org.testng</groupId>
-        <artifactId>testng</artifactId>
-        <version>6.8</version>
-        <scope>test</scope>
-    </dependency>
-
-</dependencies>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
+            <version>7.0.0-beta1</version>
+            <scope>test</scope>
+        </dependency>
+    </dependencies>
 
     <build>
         <pluginManagement>
@@ -28,15 +36,9 @@
                     <configuration>
                         <suiteXmlFiles>
                             <suiteXmlFile>testng.xml</suiteXmlFile>
-                            <!--   <suiteXmlFile>smoke.xml</suiteXmlFile> -->
+<!--                            <suiteXmlFile>${suiteFile}</suiteXmlFile>
+                            <suiteXmlFile>regresionFolder2.xml</suiteXmlFile>-->
                         </suiteXmlFiles>
-                    </configuration>
-                </plugin>
-                <plugin>
-                    <artifactId>maven-compiler-plugin</artifactId>
-                    <configuration>
-                        <source>1.8</source>
-                        <target>1.8</target>
                     </configuration>
                 </plugin>
             </plugins>
