--- a/lesson_001/pom.xml
+++ b/lesson_001/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lesson_001</groupId>
-    <artifactId>1</artifactId>
+    <artifactId>lesson_001</artifactId>
     <version>1.0-SNAPSHOT</version>
 
 
